unpackaged/objects/copado__TestType__mdt.object
<CustomObject>
	<fields>
		<fullName>copado__Category__c</fullName>
		<label>Category</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__ExecuteVia__c</fullName>
		<label>Deprecated - ExecuteVia</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__JobTemplate__c</fullName>
		<description>Job Template with the Job Steps to perform the related test type execution logic</description>
		<label>JobTemplate</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Namespace__c</fullName>
		<label>Deprecated - Namespace</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Tool__c</fullName>
		<label>Tool</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Test Type</label>
	<pluralLabel>Test Types</pluralLabel>
</CustomObject>